Creando gráficas y usando fetch con local storage

--- a/src/style.css
+++ b/src/style.css
@@ -344,6 +344,10 @@ body {
     padding-right: 0.2em;
     padding-left: 0.2em;
   }
+
+  .graphic {
+    width: 70%;
+  }
 }
 
 @media screen and (min-width:992px) {
